# sordum-ripper

./: .dockerignore  .gitignore  CMakeLists.txt  hook.c  loader.c  main.ahk
.devcontainer/: Dockerfile  devcontainer.json  mingw-toolchain.cmake
Lib/: sordum_ripper.ahk
